make link colour more visible (#173)
* DOC-1760 Improve search box

Upgrade JSUI to V2, move to Cloud V2, fix field suggestions, add ML query suggest

* Change link colour to be visible

* Fix colour for links on main page

* Auto stash before merge of "gh-pages" and "DOC-1760-improve-searchbox"

--- a/css/main.css
+++ b/css/main.css
@@ -2094,9 +2094,13 @@ h1, h2 {
 }
 
 a {
-    color:#1D4F76;;
+    color:#0E7FED;
     text-decoration: none;
     transition: all 0.2s ease
+}
+
+h2 a {
+    color: #1D4F76;
 }
 
 a:hover {
