Removed Developer Docs tab

--- a/_layouts/base.html
+++ b/_layouts/base.html
@@ -106,8 +106,7 @@
 			<nav>
 				<ul class="menu floated">
 					<li><a id="jsSupport" href="https://support.coveo.com"  target="_blank">Support</a></li>
-					<li><a id="jsProductDocs" href="https://onlinehelp.coveo.com" target="_blank">Product docs</a></li>
-					<li><a id="jsDevDocs" href="https://developers.coveo.com" target="_blank">Developer docs</a></li>
+					<li><a id="jsProductDocs" href="https://docs.coveo.com" target="_blank">Product docs</a></li>
 					<li><a id="jsAnswers" href="https://answers.coveo.com" target="_blank">Answers</a></li>
 					<li><a id="jsTraining" href="https://www.coveo.com/training" target="_blank">Training</a></li>
 					<li><a d="jsTechBlog" href="/"  class="current">Tech Blog</a></li>
