Added Zapier blogpost
Also fixed an issue with the searchbox that I didn't notice I introduced in a previous commit

--- a/_layouts/base.html
+++ b/_layouts/base.html
@@ -9,7 +9,7 @@
 
   <link rel="stylesheet" href="https://static.cloud.coveo.com/searchui/v2.4382/css/CoveoFullSearch.css"/>
   <link rel="stylesheet" href="https://s3.amazonaws.com/coveostatic/community-unified-navigation/css/styles.css" />
-  <link rel="stylesheet" href="css/community-unified-navigation-custom.css"/>
+  <link rel="stylesheet" href="https://source.coveo.com/css/community-unified-navigation-custom.css"/>
 
 
 
