Fixing developers.coveo.com Documentation link

--- a/_layouts/base.html
+++ b/_layouts/base.html
@@ -148,7 +148,7 @@
         <nav>
             <a href="{{ site.inc.url }}">{{ site.inc.company }}</a> &middot;
             <a href="https://answers.coveo.com">Answers</a>
-            <a href="https://developers.coveo.com">Documentation</a>
+            <a href="https://docs.coveo.com">Documentation</a>
         </nav>
 
         <nav class="social">
