Change Common Header

--- a/_layouts/base.html
+++ b/_layouts/base.html
@@ -105,9 +105,8 @@
 			<h1 class="currentSiteName"><em>Tech Blog</em> <span>Menu<i class="arrow"></i></span></h1>
 			<nav>
 				<ul class="menu floated">
-					<li><a id="jsSupport" href="https://support.coveo.com"  target="_blank">Support</a></li>
+					<li><a id="jsSupport" href="https://connect.coveo.com"  target="_blank">Connect</a></li>
 					<li><a id="jsProductDocs" href="https://docs.coveo.com" target="_blank">Product docs</a></li>
-					<li><a id="jsAnswers" href="https://answers.coveo.com" target="_blank">Answers</a></li>
 					<li><a id="jsTraining" href="https://academy.coveo.com/" target="_blank">Academy</a></li>
 					<li><a d="jsTechBlog" href="/"  class="current">Tech Blog</a></li>
 				</ul>
