--- a/_layouts/base.html
+++ b/_layouts/base.html
@@ -5,11 +5,11 @@
     <meta http-equiv="content-type" content="text/html; charset=utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>{% if page.title %}{{ page.title }} &mdash; {{ site.inc.title }}{% else %}{{ site.inc.title }} &mdash; {{ site.inc.subtitle }}{% endif %}</title>
-    {% if site.inc.google_font %}<link href="https://fonts.googleapis.com/css?family={{ site.inc.google_font }}" rel="stylesheet" type="text/css">{% endif %}
-
-  <link rel="stylesheet" href="https://static.cloud.coveo.com/searchui/v2.4382/css/CoveoFullSearch.css"/>
-  <link rel="stylesheet" href="https://s3.amazonaws.com/coveostatic/community-unified-navigation/css/styles.css" />
-  <link rel="stylesheet" href="https://source.coveo.com/css/community-unified-navigation-custom.css"/>
+    <link rel="stylesheet" href="https://use.typekit.net/bqa0xml.css">
+      
+    <link rel="stylesheet" href="https://static.cloud.coveo.com/searchui/v2.4382/css/CoveoFullSearch.css"/>
+    <link rel="stylesheet" href="https://s3.amazonaws.com/coveostatic/community-unified-navigation/css/styles.css?v=2020" />
+    <link rel="stylesheet" href="https://source.coveo.com/css/community-unified-navigation-custom.css?v=2020"/>
 
 
 
