--- a/_layouts/base.html
+++ b/_layouts/base.html
@@ -6,17 +6,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>{% if page.title %}{{ page.title }} &mdash; {{ site.inc.title }}{% else %}{{ site.inc.title }} &mdash; {{ site.inc.subtitle }}{% endif %}</title>
     <link rel="stylesheet" href="https://use.typekit.net/bqa0xml.css">
-      
+         
     <link rel="stylesheet" href="https://static.cloud.coveo.com/searchui/v2.4382/css/CoveoFullSearch.css"/>
-    <link rel="stylesheet" href="https://s3.amazonaws.com/coveostatic/community-unified-navigation/css/styles.css?v=2020" />
-    <link rel="stylesheet" href="https://source.coveo.com/css/community-unified-navigation-custom.css?v=2020"/>
-
-
+    <link rel="stylesheet" href="https://s3.amazonaws.com/coveo-static/community-unified-navigation/css/styles.css" />
+    <link rel="stylesheet" href="https://source.coveo.com/css/community-unified-navigation-custom.css?v=reskin"/>
 
 	{% include _search.html %}
 
     <link rel="stylesheet" type="text/css" href="{{ site.github.url | replace: 'http://', '//' }}/css/main.css"/>
-    <link rel="shortcut icon" href="{{ site.github.url | replace: 'http://', '//' }}/favicon.ico" type="image/x-icon" />
+    <link rel="shortcut icon" href="https://www.coveo.com/public/img/favicon.png">
     <link rel="apple-touch-icon-precomposed" sizes="144x144" href="{{ site.github.url | replace: 'http://', '//' }}/images/apple-touch-icon-144x144	-precomposed.png" />
     <link rel="apple-touch-icon-precomposed" sizes="114x114" href="{{ site.github.url | replace: 'http://', '//' }}/images/apple-touch-icon-114x114-precomposed.png" />
     <link rel="apple-touch-icon-precomposed" sizes="72x72" href="{{ site.github.url | replace: 'http://', '//' }}/images/apple-touch-icon-72x72-precomposed.png" />
