Updated links in header and footer

--- a/_layouts/base.html
+++ b/_layouts/base.html
@@ -112,8 +112,9 @@
 					<li>
 						<a href="#" class="sub">More <i class="arrow"></i></a>
 						<ul>
-							<li><a d="jsCloudAdminV1" target="_blank" href="https://cloud.coveo.com">Cloud V1 Administration Console</a></li>
-							<li><a d="jsCloudAdminV2" target="_blank" href="https://platform.cloud.coveo.com">Cloud V2 Administration Console</a></li>
+              <li><a d="jsCloudAdminV2" target="_blank" href="https://platform.cloud.coveo.com">Coveo Relevance Platform</a></li>
+              <li><a d="coveoTurbo" target="_blank" href="https://coveo-turbo.github.io">Coveo Turbo</a></li>
+              <li><a d="coveoGithub" target="_blank" href="https://github.com/coveo">Coveo GitHub</a></li>
 						</ul>
 					</li>
 				</ul>
@@ -144,8 +145,9 @@
 
         <nav>
             <a href="{{ site.inc.url }}">{{ site.inc.company }}</a> &middot;
-            <a href="https://answers.coveo.com">Answers</a>
+            <a href="https://connect.coveo.com">Connect</a>
             <a href="https://docs.coveo.com">Documentation</a>
+            <a href="https://careers.coveo.com">Careers</a>
         </nav>
 
         <nav class="social">
