remove illustration on Post Page.

--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -2,11 +2,11 @@
 layout: base
 ---
 
-<div class="illustration">
+<!-- <div class="illustration">
     <div class="container">
         <a href="/"><img src="{{ site.github.url | replace: 'http://', '//' }}/images/illustration-half.png" alt="Tech Blog" class="half-ill"></a>
     </div>
-</div>
+</div> -->
 
 {% if page.cover_image %}
 <div class="article-cover">
