Add Onetrust ( Cookie Policy Banner )

--- a/_layouts/base.html
+++ b/_layouts/base.html
@@ -83,6 +83,11 @@
   <meta name="author" content="{{ page.author.name }}" />
 {% endif %}
 
+<script src="https://cdn.cookielaw.org/scripttemplates/otSDKStub.js" data-document-language="true" type="text/javascript" charset="UTF-8" data-domain-script="189eb9e6-31f9-412d-981f-f16eb5581a81"></script>
+<script type="text/javascript">
+    function OptanonWrapper() {}
+</script>
+
 {% if site.inc.analytics.google %}
   {% include _google-analytics.html %}
 {% endif %}
