--- a/_layouts/base.html
+++ b/_layouts/base.html
@@ -83,10 +83,7 @@
   <meta name="author" content="{{ page.author.name }}" />
 {% endif %}
 
-<script src="https://cdn.cookielaw.org/scripttemplates/otSDKStub.js" data-document-language="true" type="text/javascript" charset="UTF-8" data-domain-script="189eb9e6-31f9-412d-981f-f16eb5581a81"></script>
-<script type="text/javascript">
-    function OptanonWrapper() {}
-</script>
+{% include _cookie-policy.html %}
 
 {% if site.inc.analytics.google %}
   {% include _google-analytics.html %}
@@ -152,7 +149,8 @@
             <a href="{{ site.inc.url }}">{{ site.inc.company }}</a> &middot;
             <a href="https://connect.coveo.com">Connect</a>
             <a href="https://docs.coveo.com">Documentation</a>
-            <a href="https://careers.coveo.com">Careers</a>
+            <a href="https://careers.coveo.com">Careers</a>  &middot;
+            <a href="#ot_toggleInfoDisplay" class="show-ot-infoDisplay">Cookies Preferences</a>
         </nav>
 
         <nav class="social">
