Academy becomes Level Up

--- a/_layouts/base.html
+++ b/_layouts/base.html
@@ -107,7 +107,7 @@
 				<ul class="menu floated">
 					<li><a id="jsSupport" href="https://connect.coveo.com"  target="_blank">Connect</a></li>
 					<li><a id="jsProductDocs" href="https://docs.coveo.com" target="_blank">Product docs</a></li>
-					<li><a id="jsTraining" href="https://academy.coveo.com/" target="_blank">Academy</a></li>
+					<li><a id="jsTraining" href="https://levelup.coveo.com/" target="_blank">Level Up</a></li>
 					<li><a d="jsTechBlog" href="/"  class="current">Tech Blog</a></li>
 				</ul>
 				<ul class="externalbox with-sub">
