--- a/_includes/_cookie-policy.html
+++ b/_includes/_cookie-policy.html
@@ -1,3 +1,4 @@
+<script type="text/javascript" src="https://cdn.cookielaw.org/consent/189eb9e6-31f9-412d-981f-f16eb5581a81/OtAutoBlock.js" ></script>
 <script src="https://cdn.cookielaw.org/scripttemplates/otSDKStub.js" data-document-language="true" type="text/javascript" charset="UTF-8" data-domain-script="189eb9e6-31f9-412d-981f-f16eb5581a81"></script>
 <script type="text/javascript">
     function OptanonWrapper() {}
