Fix Magic Suggestions  (#247)
* Fix Magic Suggestions section

* Fix  MagicBox Suggestions

--- a/_layouts/base.html
+++ b/_layouts/base.html
@@ -9,7 +9,7 @@
          
     <link rel="stylesheet" href="https://static.cloud.coveo.com/searchui/v2.10093/css/CoveoFullSearch.css"/>
     <link rel="stylesheet" href="https://s3.amazonaws.com/coveo-static/community-unified-navigation/css/styles.css" />
-    <link rel="stylesheet" href="https://source.coveo.com/css/community-unified-navigation-custom.css?v=reskin"/>
+    <link rel="stylesheet" href="{{ site.github.url | replace: 'http://', '//' }}/css/community-unified-navigation-custom.css?v=20220802"/>
 
 	{% include _search.html %}
 
