Add search hub and some CSS cleanup

--- a/_layouts/base.html
+++ b/_layouts/base.html
@@ -133,7 +133,7 @@
           data-enable-query-syntax="true"
           data-enable-field-addon="true">
         </div>
-				<div class="CoveoFieldSuggestions" data-field="@techblogtitle" data-header-title="Posts"></div>
+				<div class="CoveoAnalytics" data-search-hub="CustomerZeroCommunityCustomer">
 			</div>
 		</div>
 	</header>
