--- a/_layouts/base.html
+++ b/_layouts/base.html
@@ -151,6 +151,7 @@
             <a href="https://docs.coveo.com">Documentation</a>
             <a href="https://careers.coveo.com">Careers</a>  &middot;
             <a href="#ot_toggleInfoDisplay" class="show-ot-infoDisplay">Cookies Preferences</a>
+            <a href="https://www.coveo.com/en/pages/privacy-policy#California-Residents" target="_blank" class="ccpa"> <img src="images/ccpa-privacyoptions.svg" alt="CCPA" width="33" id="ccpa_icon" />Your Privacy Choices</a>
         </nav>
 
         <nav class="social">
