Reimplement CSP after git issue

--- a/_layouts/base.html
+++ b/_layouts/base.html
@@ -21,6 +21,7 @@
     <link rel="apple-touch-icon-precomposed" href="{{ site.github.url | replace: 'http://', '//' }}/images/apple-touch-icon-precomposed.png" />
     <link href="{{ site.github.url | replace: 'http://', '//' }}/feed.xml" rel="alternate" type="application/rss+xml" title="{{ site.inc.title }}" />
 
+    {% include _content-security-policy.html %}
     <meta property="og:site_name" content="{{ site.title }}" />
     <meta name="twitter:card" content="summary" />
 
@@ -151,7 +152,7 @@
             <a href="https://docs.coveo.com">Documentation</a>
             <a href="https://careers.coveo.com">Careers</a>  &middot;
             <a href="#ot_toggleInfoDisplay" class="show-ot-infoDisplay">Cookies Preferences</a>
-            <a href="https://www.coveo.com/en/pages/privacy-policy#California-Residents" target="_blank" class="ccpa"> <img src="images/ccpa-privacyoptions.svg" alt="CCPA" width="33" id="ccpa_icon" />Your Privacy Choices</a>
+            <a href="https://www.coveo.com/en/pages/privacy-policy#California-Residents" target="_blank" class="ccpa"> <img src="{{site.baseurl}}/images/ccpa-privacyoptions.svg" alt="CCPA" width="33" id="ccpa_icon" />Your Privacy Choices</a>
         </nav>
 
         <nav class="social">
